CHANGES-1.3.txt
---------------

CHANGES IN CUPS V1.3.9

	- Documentation updates (STR #2904, STR #2944)
	- The scheduler did not always log "job queued" messages
	  (STR #2943)
	- The scheduler did not support destination filtering using
	  the printer-location attribute properly (STR #2945)
	- The scheduler did not send the server-started,
	  server-restarted, or server-stopped events (STR #2927)
	- The scheduler no longer enforces configuration file
	  permissions on symlinked files (STR #2937)
	- CUPS now reinitializes the DNS resolver on failures
	  (STR #2920)
	- The CUPS desktop menu item was broken (STR #2924)
	- The PPD parser was too strict about missing keyword
	  values in "relaxed" mode.
	- The PostScript filter incorrectly mirrored landscape
	  documents.
	- The scheduler did not correctly update the
	  auth-info-required value(s) if the AuthType was Default.
	- The scheduler required Kerberos authentication for
	  all operations on remote Kerberized printers instead
	  of just for the operations that needed it.
	- The socket backend could wait indefinitely for back-
	  channel data with some devices.
	- PJL panel messages were not reset correctly on older
	  printers (STR #2909)
	- cupsfilter used the wrong default path (STR #2908)
	- Fixed address matching for "BrowseAddress @IF(name)"
	  (STR #2910)
	- Fixed compiles on AIX.
	- Firefox 3 did not work with the CUPS web interface in SSL
	  mode (STR #2892)
	- Custom options with multiple parameters were not emitted
	  correctly.
	- Refined the cupstestppd utility.
	- ppdEmit*() did not support custom JCL options (STR #2889)
	- The cupstestppd utility incorrectly reported missing
	  "en" base translations (STR #2887)


CHANGES IN CUPS V1.3.8

	- Documentation updates (STR #2785, STR #2861, STR #2862)
	- The scheduler did not add the ending job sheet when the
	  job was released.
	- The IPP backend did not relay marker-* attributes.
	- The CUPS GNOME/KDE menu item was not localized for