@@ -4,6 +4,8 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.9
 
 	- Documentation updates (STR #2904, STR #2944)
+	- The cupsGetDests() function did not catch all types of
+	  request errors.
 	- The scheduler did not always log "job queued" messages
 	  (STR #2943)
 	- The scheduler did not support destination filtering using
